Type safety:
The expression of type CustomComboBoxDemo.ComboBoxRenderer needs
unchecked conversion
to conform to ListCellRenderer<? super Integer>